--- a/Checkmate.Mvc/Views/Administration/ListRoles.cshtml
+++ b/Checkmate.Mvc/Views/Administration/ListRoles.cshtml
@@ -8,40 +8,49 @@
 
 <h1>All Roles</h1>
 
-@if (Model.Any())
-{
-    <a class="btn btn-primary mb-3" style="width:auto" asp-action="CreateRole"
-       asp-controller="administration"><i class='material-icons' style='font-size: 24px;'>add_circle_outline</i></a>
-    <table id="dtRoles" class="table table-striped table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th>Edit</th>
-                <th>Role Id</th>
-                <th>Role Name</th>
-                <th>Delete</th>
-            </tr>
-        </thead>
-    </table>      
-}
-else
-{
-    <div class="card">
-        <div class="card-header">
-            No roles created yet
+<div>
+    <br />
+    <a class="btn btn-primary btn-lg"  style="width:auto" asp-action="CreateRole" asp-controller="administration">
+        Add Role
+    </a>
+    <br />
+</div>
+<br />
+<div>
+    @if (Model.Any())
+    {
+    
+        <table id="dtRoles" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th class="columnCenterbold">#</th>
+                    <th>Edit</th>
+                    <th>Role Id</th>
+                    <th>Role Name</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+        </table>
+    }
+    else
+    {
+        <div class="card">
+            <div class="card-header">
+                No roles created yet
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">
+                    Use the button below to create a role
+                </h5>
+                <a class="btn btn-primary" style="width:auto"
+                   asp-controller="administration" asp-action="CreateRole">
+                    Create Role
+                </a>
+            </div>
         </div>
-        <div class="card-body">
-            <h5 class="card-title">
-                Use the button below to create a role
-            </h5>
-            <a class="btn btn-primary" style="width:auto"
-               asp-controller="administration" asp-action="CreateRole">
-                Create Role
-            </a>
-        </div>
-    </div>
-}
+    }
 
-
+</div>
 
 
 <div class="modal fade" id="DeleteConfirm">
