--- a/Checkmate.Mvc/Views/Administration/ListUsers.cshtml
+++ b/Checkmate.Mvc/Views/Administration/ListUsers.cshtml
@@ -5,44 +5,52 @@
     ViewBag.Title = "All Users";
 }
 
-<h1>Users</h1>
+<h1>All Users</h1>
 
-@if (Model.Any())
-{
+<div>
+    <br />
     <a asp-action="Register" asp-controller="Account"
-       class="btn btn-primary mb-3" style="width:auto">
-        <i class='material-icons' style='font-size: 24px;'>add_circle_outline</i> Add user
+       class="btn btn-primary btn-lg">
+        @*<i class='material-icons' style='font-size: 24px;'>add_circle_outline</i>*@ Add User
     </a>
+    <br />
+</div>
+<br />
+<div>
+    @if (Model.Any())
+    {
 
-    <table id="dtUsers" class="table table-striped table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th>Edit</th>
-                <th>User Id</th>
-                <th>User Name</th>
-                <td>Email</td>
-                <th>Delete</th>
-            </tr>
-        </thead>
-    </table>
-}
-else
-{
-    <div class="card">
-        <div class="card-header">
-            No users created yet
+
+        <table id="dtUsers" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th style="font-weight:bold">#</th>
+                    <th>Edit</th>
+                    <th>User Id</th>
+                    <td>Email</td>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+        </table>
+    }
+    else
+    {
+        <div class="card">
+            <div class="card-header">
+                No users created yet
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">
+                    Use the button below to create a user
+                </h5>
+                <a class="btn btn-primary" style="width:auto"
+                   asp-controller="Account" asp-action="Register">
+                    Add new user
+                </a>
+            </div>
         </div>
-        <div class="card-body">
-            <h5 class="card-title">
-                Use the button below to create a user
-            </h5>
-            <a class="btn btn-primary" style="width:auto"
-               asp-controller="Account" asp-action="Register">
-                Add new user
-            </a>
-        </div>
-    </div>
-}
+    }
+</div>
 
 <div class="modal fade" id="DeleteConfirm">
     <div class="modal-dialog">
