Administrator can Reset Password for all users

--- a/Checkmate.Mvc/Views/Account/ResetPassword.cshtml
+++ b/Checkmate.Mvc/Views/Account/ResetPassword.cshtml
@@ -1,18 +1,26 @@
 ﻿@model ResetPasswordViewModel
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> signInManager
+@inject UserManager<IdentityUser> userInManager
 <h2>Reset Password</h2>
 <hr />
 @if (signInManager.IsSignedIn(User))
 {
+
+    IdentityUser user = userInManager.FindByIdAsync(ViewBag.UserId).Result;
+    if (user == null)
+    {
+        user = new IdentityUser();
+        user.Email = User.Identity.Name;
+    }
     <div class="row">
         <div class="col-md-12">
             <form method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
-                <input asp-for="Email" type="hidden" value="@User.Identity.Name" />
+                <input asp-for="Email" type="hidden" value="@user.Email" />
                 <div class="form-group">
                     <label asp-for="Username"></label>
-                    <input asp-for="Username" value="@User.Identity.Name" disabled class="form-control" />
+                    <input asp-for="Username" value="@user.Email" disabled class="form-control" />
                     <span asp-validation-for="Username" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -28,6 +36,6 @@
                 <button type="submit" class="btn btn-primary">Reset</button>
             </form>
         </div>
-    </div>
-
+    </div>            
+        
 }
