--- a/Checkmate.Mvc/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Checkmate.Mvc/Views/Account/ResetPasswordConfirmation.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "ResetPasswordConfirmation";
 }
 
-    <h4>
-        Your password is reset
-    </h4>
+<h4>
+    Password is Reseted.
+</h4>
 
