--- a/Checkmate.Mvc/Views/Administration/ListUsers.cshtml
+++ b/Checkmate.Mvc/Views/Administration/ListUsers.cshtml
@@ -29,6 +29,7 @@
                     <th>User Id</th>
                     <td>Email</td>
                     <th>Delete</th>
+                    <th>Reset</th>
                 </tr>
             </thead>
         </table>
@@ -70,5 +71,7 @@
         </div>
     </div>
 </div>
+
+
 <input type="text" value="0" id="deleteId" hidden />
 <script src="~/js/users.js"></script>
